--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -287,7 +287,7 @@ bot.notificator.tara=\u0422\u0430\u0440\u0430: %1$,.2f
 bot.notificator.netto=\u041D\u0435\u0442\u0442\u043E: %1$,.2f
 bot.notificator.humidity=\u0412\u043E\u043B\u043E\u0433\u0430: %1$,.2f
 bot.notificator.humidity1=\u0412\u043E\u043B\u043E\u0433\u0430 \u043C\u0430\u0448\u0438\u043D\u0438: %1$,.2f
-bot.notificator.humidity2=\u0412\u043E\u043B\u043E\u0433\u0430 \u043F\u0440\u0438\u0446\u0435\u043F\u0430: %1$,.2f
+bot.notificator.humidity2=\u0412\u043E\u043B\u043E\u0433\u0430 \u043F\u0440\u0438\u0446\u0435\u043F\u0430\: %1$,.2f
 bot.notificator.soreness=\u0421\u043C\u0456\u0442\u0442\u0454\u0432\u0430 \u0434\u043E\u043C\u0456\u0448\u043A\u0430: %1$,.2f
 bot.notificator.oiliness=\u041E\u043B\u0456\u0439\u043D\u0456\u0441\u0442\u044C: %1$,.2f
 bot.notificator.protein=\u041F\u0440\u043E\u0442\u0435\u0457\u043D: %1$,.2f
@@ -367,17 +367,17 @@ extraction.miscellas=\u041A\u043E\u043D\u0446\u0435\u043D\u0442\u0440\u0430\u044
 extraction.humidity=\u0412\u043B\u0430\u0433\u0430 \u0448\u0440\u043E\u0442\u0430: %1$s
 extraction.oiliness=\u041C.\u0427.\u041C \u0432 \u0448\u0440\u043E\u0442\u0435: %1$s
 extraction.meal=\u0428\u0440\u043E\u0442
-notification.vro.title=#    \u0426\u0435\u0445 \u0412\u0420\u041E    #
+notification.vro.title=\#    \u0426\u0435\u0445 \u0412\u0420\u041E    \#
 notification.vro.before=*\u0414\u043E \u043E\u0447\u0438\u0441\u0442\u043A\u0438*
 notification.vro.after=*\u041F\u0456\u0441\u043B\u044F \u043E\u0447\u0438\u0441\u0442\u043A\u0438*
-notification.vro.humidity=\t    \u0412\u043E\u043B\u043E\u0433\u043E \u043D\u0430\u0441\u0456\u043D\u043D\u044F: %1$s
-notification.vro.soreness=\t    \u0421\u043C\u0456\u0442\u0442\u0454\u0432\u0430 \u0434\u043E\u043C\u0456\u0448\u043A\u0430: %1$s
-notification.vro.pulp.1=\u0412\u043E\u043B\u043E\u0433\u0430 \u043C\u0435\u0437\u0433\u0438 1: %1$s
-notification.vro.pulp.2=\u0412\u043E\u043B\u043E\u0433\u0430 \u043C\u0435\u0437\u0433\u0438 2: %1$s
-notification.vro.forpress.humidity=\u0424\u043E\u0440\u043F\u0440\u0435\u0441 %1$s \u0432\u043B\u0430\u0433\u0430: %1$s
-notification.vro.forpress.oiliness=\u0424\u043E\u0440\u043F\u0440\u0435\u0441 %1$s \u041C.\u0427.\u041C.: %1$s
+notification.vro.humidity=\u0412\u043E\u043B\u043E\u0433\u043E \u043D\u0430\u0441\u0456\u043D\u043D\u044F\: %1$s
+notification.vro.soreness=\u0421\u043C\u0456\u0442\u0442\u0454\u0432\u0430 \u0434\u043E\u043C\u0456\u0448\u043A\u0430\: %1$s
+notification.vro.pulp.1=\u0412\u043E\u043B\u043E\u0433\u0430 \u043C\u0435\u0437\u0433\u0438 1\: %1$s
+notification.vro.pulp.2=\u0412\u043E\u043B\u043E\u0433\u0430 \u043C\u0435\u0437\u0433\u0438 2\: %1$s
+notification.vro.forpress.humidity=\u0424\u043E\u0440\u043F\u0440\u0435\u0441 %1$s \u0432\u043E\u043B\u043E\u0433\u0430\: %1$s
+notification.vro.forpress.oiliness=\u0424\u043E\u0440\u043F\u0440\u0435\u0441 %1$s \u041C.\u0427.\u041E.\: %1$s
 notification.vro.kernel.offset.2=\u0412\u0438\u043D\u0456\u0441 \u044F\u0434\u0440\u0430: %1$s
-notification.vro.huskiness.2=\u041B\u0443\u0437\u0436\u0438\u0441\u0442\u0456\u0441\u0442\u044C: %1$s
+notification.vro.huskiness.2=\u041B\u0443\u0437\u0436\u0438\u0441\u0442\u0456\u0441\u0442\u044C\: %1$s
 extraction.turn.crude=\u041F\u0440\u043E\u0442\u044D\u0438\u043D \u0437\u0430 \u0441\u043C\u0435\u043D\u0443
 title.extraction.turn.crude=\u041F\u0440\u043E\u0442\u0435\u0438\u043D \u0437\u0430 \u0441\u043C\u0435\u043D\u0443
 extraction.daily.crude=\u041F\u0440\u043E\u0442\u0435\u0438\u043D \u0437\u0430 \u0441\u0443\u0442\u043A\u0438
@@ -411,7 +411,7 @@ title.extraction.storage.grease=\u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u044
 extraction.turn.grease.title=#    \u0421\u044B\u0440\u043E\u0439 \u0436\u0438\u0440 \u0437\u0430 \u0441\u043C\u0435\u043D\u0443    #
 extraction.turn.grease.grease=\u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440: %1$s
 extraction.storage.grease.title=#    \u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440 \u043D\u0430 \u0441\u043A\u043B\u0430\u0434\u0456    #
-notification.forpress.cake.title=#    \u0424\u043E\u0440\u043F\u0440\u0435\u0441\u043E\u0432\u0430 \u043C\u0430\u043A\u0443\u0445\u0430    #
+notification.forpress.cake.title=\#    \u0424\u043E\u0440\u043F\u0440\u0435\u0441\u043E\u0432\u0430 \u043C\u0430\u043A\u0443\u0445\u0430    \#
 print.daily.report=\u0414\u043E\u0431\u043E\u0432\u0438\u0439 \u0437\u0432\u0456\u0442
 title.extraction.daily.report.print=\u0414\u0440\u0443\u043A \u0434\u043E\u0431\u043E\u0432\u043E\u0433\u043E \u0437\u0432\u0456\u0442\u0443
 oil.mass.fraction=\u041C\u0430\u0441\u043E\u0432\u0430 \u0447\u0430\u0441\u0442\u043A\u0430 \u043E\u043B\u0456\u0457
@@ -431,7 +431,7 @@ vro.part=\u0412\u0430\u0440\u043A\u0430
 title.vro.part.edit=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u043D\u043D\u044F \u0432\u0430\u0440\u043A\u0438
 oil.soap.yes=\u041F\u0440\u0438\u0441\u0443\u0442\u043D\u0454
 oil.soap.no=\u0412\u0456\u0434\u0441\u0443\u0442\u043D\u0454
-notification.kpo.title=\#       \u041F\u0430\u0440\u0442\u0456\u044F \#%1$s        \#
+notification.kpo.title=\#       *\u041F\u0430\u0440\u0442\u0456\u044F \#%1$s*        \#
 notification.kpo.organoleptic=\u041E\u0440\u0433\u0430\u043D\u043E\u043B\u0435\u043F\u0442\u0438\u0447\u043D\u0456 \u043F\u043E\u043A\u0430\u0437\u043D\u0438\u043A\u0438\: %s
 notification.kpo.organoleptic.yes=\u0412\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u044E\u0442\u044C \u041D\u0414
 notification.kpo.organoleptic.no=\u043D\u0435 \u0432\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u044E\u0442\u044C \u041D\u0414
@@ -464,19 +464,24 @@ sun.humidity.1=\u0412\u043E\u043B. \u0430.
 sun.humidity.2=\u0412\u043E\u043B. \u043F.
 laboratory.response=\u0412\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u043B\u044C\u043D\u0430 \u043E\u0441\u043E\u0431\u0430
 friend.registration=\u0417\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u0443\u0432\u0430\u0442\u0438 \u0434\u0440\u0443\u0433\u0430
-subdivision=\u0413\u0440\u0443\u043F\u0430
-admin=\u0410\u0434\u043C\u0456\u043D\u0456\u0441\u0442\u0440\u0430\u0442\u043E\u0440
-manager=\u041C\u0435\u043D\u0435\u0434\u0436\u043A\u0440
-logistic=\u041B\u043E\u0433\u0456\u0441\u0442
-security=\u041E\u0445\u043E\u0440\u043E\u043D\u043D\u0438\u043A
-weigher=\u0412\u0430\u0433\u0430\u0440-\u043E\u0431\u043B\u0456\u043A\u043E\u0432\u0435\u0446\u044C
-analyser=\u0425\u0456\u043C\u0456\u043A-\u043B\u0430\u0431\u043E\u0440\u0430\u043D\u0442
+subdivision=\u041F\u0456\u0434\u0440\u043E\u0437\u0434\u0456\u043B
+role.admin=\u0410\u0434\u043C\u0456\u043D
+role.admins=\u0410\u0434\u043C\u0456\u043D\u0456\u0441\u0442\u0440\u0430\u0442\u043E\u0440\u0438
+role.manager=\u041C\u0435\u043D\u0435\u0434\u0436e\u0440
+role.managers=\u041C\u0435\u043D\u0435\u0434\u0436\u0435\u0440\u0438
+role.logistic=\u041B\u043E\u0433\u0456\u0441\u0442
+role.logistics=\u041B\u043E\u0433\u0456\u0441\u0442\u0438
+role.security=\u041E\u0445\u043E\u0440\u043E\u043D\u043D\u0438\u043A
+role.securitys=\u041E\u0445\u043E\u0440\u043E\u043D\u0430
+role.weigher=\u0412\u0430\u0433\u0430\u0440-\u043E\u0431\u043B\u0456\u043A\u043E\u0432\u0435\u0446\u044C
+role.weighers=\u0412\u0430\u0433\u0430\u0440\u0456-\u043E\u0431\u043B\u0456\u043A\u043E\u0432\u0446\u0456
+role.analyser=\u0425\u0456\u043C\u0456\u043A-\u043B\u0430\u0431\u043E\u0440\u0430\u043D\u0442
 bot.user.registration.title=*\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044F \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430*
-bot.user.registration.registrator=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0442\u043E\u0440: %1$s
+bot.user.registration.registrator=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0442\u043E\u0440\: %1$s
 bot.user.registration.text=\u0425\u043E\u0447\u0435 \u0437\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u0443\u0432\u0430\u0442\u0438 \u043D\u043E\u0432\u043E\u0433\u043E \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430:
 bot.user.registration.user=\u041F.\u0406.\u0411: %1$s
 bot.user.registration.role=\u0413\u0440\u0443\u043F\u0430 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432: %1$s
-bot.user.registration.email=Email: %1$s
+bot.user.registration.email=Email\: %1$s
 mean.short=\u0421\u0435\u0440\u0435\u0434\u043D\u0454
 empty.list=\u0426\u0435 \u043D\u043E\u0440\u043C\u0430\u043B\u044C\u043D\u043E. \u0422\u0443\u0442 \u043F\u0440\u043E\u0441\u0442\u043E \u043D\u0456\u0447\u043E\u0433\u043E \u043D\u0435\u043C\u0430
 references.organisation.edit=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u043D\u043D\u044F \u043E\u0440\u0433\u0430\u043D\u0456\u0437\u0430\u0446\u0456\u0457
@@ -490,7 +495,7 @@ password.restore.text=\u0414\u043B\u044F \u0432\u0456\u0434\u043D\u043E\u0432\u0
 password.restore.email.subject=\u0412\u0456\u0434\u043D\u043E\u0432\u043B\u0435\u043D\u043D\u044F \u043F\u0430\u0440\u043E\u043B\u044E
 password.restore.user.not.fount=Email %1$s \u043D\u0435 \u0437\u043D\u0430\u0439\u0434\u0435\u043D\u043E
 password.restore.cant.send=\u041D\u0435 \u0432\u0434\u0430\u043B\u043E\u0441\u044F \u0432\u0456\u0434\u043F\u0440\u0430\u0432\u0438\u0442\u0438 \u043B\u0438\u0441\u0442\u0430, %1$s
-password.restore.email.text=\u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447: %1$s, \u043F\u0430\u0440\u043E\u043B\u044C: <b>%2$s</b>
+password.restore.email.text=\u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\: %1$s, \u043F\u0430\u0440\u043E\u043B\u044C\: <b>%2$s</b>
 password.restore.success=\u041B\u0438\u0441\u0442\u0430 \u0437 \u043F\u0430\u0440\u043E\u043B\u0435\u043C \u0443\u0441\u043F\u0456\u0448\u043D\u043E \u0432\u0456\u0434\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u043E.
 password.restore.redirect=\u041F\u0435\u0440\u0435\u0445\u0456\u0434 \u043D\u0430 \u0441\u0442\u043E\u0440\u0456\u043D\u043A\u0443 \u0432\u0445\u043E\u0434\u0443 \u0447\u0435\u0440\u0435\u0437
 password.restore.redirect.now=\u041F\u0435\u0440\u0435\u0439\u0442\u0438 \u0437\u0430\u0440\u0430\u0437
@@ -503,3 +508,25 @@ notes=\u041F\u0440\u0438\u043C\u0456\u0442\u043A\u0438
 title.notes.edit=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u043D\u043D\u044F \u043F\u0440\u0438\u043C\u0456\u0442\u043E\u043A
 note.holder=\u0412\u0432\u0435\u0434\u0456\u0442\u044C \u0442\u0435\u043A\u0441\u0442 \u043F\u0440\u0438\u043C\u0456\u0442\u043A\u0438
 title.change.password=\u0417\u043C\u0456\u043D\u0430 \u043F\u0430\u0440\u043E\u043B\u044E
+vro.title=\u0426\u0435\u0445 \u0412\u0420\u041E
+vro.humidity.before=\u0412\u043E\u043B\u043E\u0433\u0430 \u0441\u043E\u043D\u044F\u0448\u043D\u0438\u043A\u0430 \u0434\u043E \u043E\u0447\u0438\u0441\u0442\u043A\u0438\: %1$s
+vro.soreness.before=\u0421\u043C\u0456\u0442\u0442\u0454\u0432\u0430 \u0434\u043E\u043C\u0456\u0448\u043A\u0430 \u0434\u043E \u043E\u0447\u0438\u0441\u0442\u043A\u0438\: %1$s
+vro.humidity.after=\u0412\u043E\u043B\u043E\u0433\u0430 \u0441\u043E\u043D\u044F\u0448\u043D\u0438\u043A\u0430 \u043F\u0456\u0441\u043B\u044F \u043E\u0447\u0438\u0441\u0442\u043A\u0438\: %1$s
+vro.soreness.after=\u0421\u043C\u0456\u0442\u0442\u0454\u0432\u0430 \u0434\u043E\u043C\u0456\u0448\u043A\u0430 \u043F\u0456\u0441\u043B\u044F \u043E\u0447\u0438\u0441\u0442\u043A\u0438\: %1$s
+vro.pulp.1=\u0412\u043E\u043B\u043E\u0433\u0430 \u043C\u0435\u0437\u0433\u0438 1\: %1$s
+vro.pulp.2=\u0412\u043E\u043B\u043E\u0433\u0430 \u043C\u0435\u0437\u0433\u0438 2\: %1$s
+vro.forpress.humidity=\u0424\u043E\u0440\u043F\u0440\u0435\u0441 %1$s \u0432\u043E\u043B\u043E\u0433\u0430 \: %2$s
+vro.forpress.oiliness=\u0424\u043E\u0440\u043F\u0440\u0435\u0441 %1$s \u041C.\u0427.\u041E.\: %1$s
+vro.kernel.offset.2=
+forpress.cake.title=\#    *\u0424\u043E\u0440\u043F\u0440\u0435\u0441\u043E\u0432\u0430 \u043C\u0430\u043A\u0443\u0445\u0430*    \#
+notification.vro.acid=\u041A\u0438\u0441\u043B\u043E\u0442\u043D\u0435 \u0447\u0438\u0441\u043B\u043E\: %s
+notification.vro.organoleptic=\u041E\u0440\u0433\u0430\u043D\u043E\u043B\u0435\u043F\u0442\u0438\u0447\u043D\u0456 \u043F\u043E\u043A\u0430\u0437\u043D\u0438\u043A\u0438\: %s
+notification.vro.organoleptic.no=\u041D\u0435 \u0432\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u044E\u0442\u044C \u041D\u0414
+notification.vro.organoleptic.yes=\u0412\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u044E\u0442\u044C \u041D\u0414
+notification.vro.peroxide=\u041F\u0435\u0440\u0435\u043A\u0438\u0441\u043D\u0435 \u0447\u0438\u0441\u043B\u043E\: %s
+notification.vro.soap=\u041C\u0438\u043B\u043E (\u044F\u043A\u0456\u0441\u043D\u0430 \u043F\u0440\u043E\u0431\u0430)\: %s
+notification.vro.soap.no=\u041F\u0440\u0438\u0441\u0443\u0442\u043D\u0454
+notification.vro.soap.yes=\u0412\u0456\u0434\u0441\u0443\u0442\u043D\u0454
+storage.volume=\u0404\u043C\u043D\u0456\u0441\u0442\u044C
+vro.huskiness.2=\u041B\u0443\u0437\u0436\u0438\u0441\u0442\u044B\u0441\u0442\u044C\: %1$s
+role.analysers=\u0425\u0456\u043C\u0456\u043A\u0438-\u043B\u0430\u0431\u043E\u0440\u0430\u043D\u0442\u0438
