--- a/server/src/main/resources/messages_ua.properties
+++ b/server/src/main/resources/messages_ua.properties
@@ -141,7 +141,7 @@ sun.oiliness=\u041E\u043B\u0456\u0439\u043D\u0456\u0441\u0442\u044C
 sun.oiliness.short=\u041C.\u0427.\u041E
 title.daily.analyses=\u0414\u043E\u0431\u043E\u0432\u0456 \u0430\u043D\u0430\u043B\u0456\u0437\u0438
 sun.acid.value=\u041A.\u0427.
-oil.organoleptic=\u041E\u0440\u0433\u0430\u043D\u043E\u043B\u0435\u043F\u0442\u0438\u043A\u0430
+oil.organoleptic=\u041E\u0440\u0433\u0430\u043D\u043E\u043B\u0435\u043F\u0442\u0438\u043A\u0430:
 oil.color.value=\u041A\u043E\u043B\u0456\u0440\u043D\u0435 \u0447\u0438\u0441\u043B\u043E
 oil.peroxide=\u041F.\u0427.
 oil.phosphorus=\u0424.\u0427.
@@ -285,10 +285,10 @@ off=\u2716
 bot.show=\u041F\u043E\u043A\u0430\u0437\u0443\u0432\u0430\u0442\u0438
 bot.dont.show=\u041D\u0435 \u043F\u043E\u043A\u0430\u0437\u0443\u0432\u0430\u0442\u0438
 bot.token.doesnt.need=\u0422\u043E\u043A\u0435\u043D \u0431\u0456\u043B\u044C\u0448\u0435 \u043D\u0435 \u043F\u043E\u0442\u0440\u0456\u0431\u0435\u043D!
-bot.notificator.transport=\u041C\u0430\u0448\u0438\u043D\u0430: %s\n\
-  \u0412\u043E\u0434\u0456\u0439: %s\n\
-  \u041A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442: %s\n\
-  \u041F\u0440\u043E\u0434\u0443\u043A\u0442: %s
+bot.notificator.transport=\u041A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442: *%1$s*\n\
+  \u0412\u043E\u0434\u0456\u0439: %2$s\n\
+  \u041F\u0440\u043E\u0434\u0443\u043A\u0446\u0456\u044F: %3$s\n\
+  -------------------------
 bot.notificator.transport.in=\u0417\u0430\u0457\u0445\u0430\u0432 \u043D\u0430 \u0442\u0435\u0440\u0438\u0442\u043E\u0440\u0456\u044E
 bot.notificator.transport.out=\u0412\u0438\u0457\u0445\u0430\u0432 \u0437 \u0442\u0435\u0440\u0438\u0442\u043E\u0440\u0456\u0457
 bot.notification.transport.done=\u0412\u0438\u043A\u043E\u043D\u0430\u0432 \u043C\u0456\u0441\u0456\u044E
