--- a/server/src/main/resources/messages_ua.properties
+++ b/server/src/main/resources/messages_ua.properties
@@ -150,7 +150,7 @@ sun.acid.value=\u041A.\u0427.
 oil.organoleptic=\u041E\u0440\u0433\u0430\u043D\u043E\u043B\u0435\u043F\u0442\u0438\u043A\u0430:
 oil.color.value=\u041A\u043E\u043B\u0456\u0440\u043D\u0435 \u0447\u0438\u0441\u043B\u043E
 oil.peroxide=\u041F.\u0427.
-oil.phosphorus=\u0424.\u0427.
+oil.phosphorus=\u041C.\u0447.\u0444.
 oil.soap=\u041C\u0438\u043B\u043E
 oil.wax=\u0412\u0456\u0441\u043A
 cake.protein=\u041F\u0440\u043E\u0442\u0435\u0457\u043D
@@ -241,6 +241,7 @@ personal.data=\u041E\u0441\u043E\u0431\u0438\u0441\u0442\u0456 \u0434\u0430\u043
 password.change=\u0417\u043C\u0456\u043D\u0438\u0442\u0438 \u043F\u0430\u0440\u043E\u043B\u044C
 phones=\u041D\u043E\u043C\u0435\u0440\u0438 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0456\u0432
 title.admin=\u0410\u0434\u043C\u0456\u043D\u0456\u0441\u0442\u0440\u0443\u0432\u0430\u043D\u043D\u044F
+title.organisation.collapse=\u041A\u043E\u043B\u043B\u0430\u043F\u0441 \u043E\u0440\u0433\u0430\u043D\u0456\u0437\u0430\u0446\u0456\u0439
 user.registration=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044F \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432
 role=\u0420\u043E\u043B\u044C
 email=Email
@@ -313,7 +314,7 @@ bot.notificator.oil.impurity=\u041E\u043B\u0456\u0439\u043D\u0430 \u0434\u043E\u
 bot.notificator.oil.acid=\u041A\u0438\u0441\u043B\u043E\u0442\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$,.2f
 bot.notificator.color=\u041A\u043E\u043B\u0456\u0440\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %,.1f
 bot.notificator.peroxide=\u041F\u0435\u0440\u0435\u043A\u0438\u0441\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$,.2f
-bot.notificator.phosphorus=\u0424\u043E\u0441\u0444\u043E\u0440\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$,.2f
+bot.notificator.phosphorus=\u041C.\u0447.\u0444.: %1$,.2f
 bot.notificator.soap=\u041C\u0438\u043B\u043E (\u044F\u043A\u0456\u0441\u043D\u0430 \u043F\u0440\u043E\u0431\u0430): %1$s
 bot.notificator.wax=\u0412\u0456\u0441\u043A: %1$,.2f
 recount.percentage=% \u043F\u0435\u0440\u0435\u0440\u0430\u0445\u0443\u043D\u043A\u0443
@@ -411,7 +412,7 @@ extraction.oil.turn=\u0417\u043C\u0456\u043D\u0430 #%1$s \u0437\u0430 %2$s
 bot.extraction.oil.humidity=\u041C.\u0427. \u0432\u043E\u043B\u043E\u0433\u0438: %1$s
 extraction.oil.acid.value=\u041A\u0438\u0441\u043B\u043E\u0442\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$s
 extraction.oil.peroxide.value=\u041F\u0435\u0440\u0435\u043A\u0438\u0441\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$s
-extraction.oil.phosphorus.value=\u0424\u043E\u0441\u0444\u043E\u0440\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$s
+extraction.oil.phosphorus.value=\u041C.\u0447.\u0444: %1$s
 extraction.oil.explosion.t=\u0422\u0435\u043C\u043F\u0435\u0440\u0430\u0442\u0443\u0440\u0430 \u0441\u043F\u0430\u043B\u0430\u0445\u0443 \u0435\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0456\u0439\u043D\u043E\u0457 \u043E\u043B\u0456\u0457: %1$s
 extraction.turn.protein.title=#    \u041F\u0440\u043E\u0442\u0435\u0457\u043D \u0437\u0430 \u0437\u043C\u0456\u043D\u0443    #
 extraction.turn.protein.turn=\u0417\u043C\u0456\u043D\u0430 #%1$s \u0437\u0430 %2$s
@@ -651,3 +652,4 @@ amount.total=\u0412\u0441\u044C\u043E\u0433\u043E
 report.build=\u041F\u043E\u0431\u0443\u0434\u0443\u0432\u0430\u0442\u0438 \u0437\u0432\u0456\u0442
 comment=\u041A\u043E\u043C\u043C\u0435\u043D\u0442
 middle=\u0421\u0435\u0440\u0435\u0434\u043D\u0454
+admin.collapse.organisations=\u041A\u043E\u043B\u043B\u0430\u043F\u0441 \u043E\u0440\u0433\u0430\u043D\u0456\u0437\u0430\u0446\u0456\u0439
