--- a/server/src/main/resources/messages_ua.properties
+++ b/server/src/main/resources/messages_ua.properties
@@ -80,8 +80,8 @@ load.plan.drop.title=\u0412\u0456\u0434\u043C\u0456\u043D\u0438\u0442\u0438 \u04
 title.logistic.list=\u041B\u043E\u0433\u0456\u0441\u0442\u0438\u043A\u0430
 title.transport.list=\u0422\u0440\u0430\u043D\u0441\u043F\u043E\u0440\u0442
 transportation.automobile=\u041C\u0430\u0448\u0438\u043D\u0430
-oil.organoleptic.match=\u0412\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u0454
-oil.organoleptic.doesn't.match=\u041D\u0435 \u0432\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u0454
+oil.organoleptic.match=\u0412\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u0454 \u041D\u0414
+oil.organoleptic.doesn't.match=\u041D\u0435 \u0432\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u0454 \u041D\u0414
 transportation.driver=\u0412\u043E\u0434\u0456\u0439
 no.data=\u041D\u0435\u043C\u0430 \u0434\u0430\u043D\u0438\u0445
 title.transport.show=\u0414\u0430\u043D\u0456 \u043F\u043E \u043C\u0430\u0448\u0438\u043D\u0456
@@ -316,7 +316,8 @@ bot.notificator.color=\u041A\u043E\u043B\u0456\u0440\u043D\u0435 \u0447\u0438\u0
 bot.notificator.peroxide=\u041F\u0435\u0440\u0435\u043A\u0438\u0441\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$,.2f
 bot.notificator.phosphorus=\u041C.\u0447.\u0444.: %1$,.2f
 bot.notificator.soap=\u041C\u0438\u043B\u043E (\u044F\u043A\u0456\u0441\u043D\u0430 \u043F\u0440\u043E\u0431\u0430): %1$s
-bot.notificator.wax=\u0412\u0456\u0441\u043A: %1$,.2f
+bot.notificator.wax=\u0412\u0456\u0441\u043A: %1$s
+bot.notificator.explosion=\u0422\u0435\u043C\u043F\u0435\u0440\u0430\u0442\u0443\u0440\u0430 \u0441\u043F\u0430\u043B\u0430\u0445\u0443: %1$,.1f
 recount.percentage=% \u043F\u0435\u0440\u0435\u0440\u0430\u0445\u0443\u043D\u043A\u0443
 units=\u041E\u0434\u0438\u043D\u0438\u0446\u044F \u0432\u0438\u043C\u0456\u0440\u0443
 deal.new=\u041D\u043E\u0432\u0438\u0439 \u043A\u043E\u043D\u0442\u0440\u0430\u043A\u0442
@@ -369,7 +370,7 @@ extraction.turn=\u0417\u043C\u0456\u043D\u0430 #%1$s *%2$s*, \u0427\u0430\u0441 
 extraction.humidity.income=\u0412\u043E\u043B\u043E\u0433\u0430 \u0432\u0445\u0456\u0434\u043D\u043E\u0457 \u0444\u043E\u0440\u043F\u0440\u0435\u0441\u043E\u0432\u043E\u0457 \u043C\u0430\u043A\u0443\u0445\u0438: *%1$s*
 extraction.oiliness.income=\u041C.\u0427.\u041E. \u0432\u0445\u0456\u0434\u043D\u043E\u0457 \u0444\u043E\u0440\u043F\u0440\u0435\u0441\u043E\u0432\u043E\u0457 \u043C\u0430\u043A\u0443\u0445\u0438: *%1$s*
 extraction.fraction=\u0414\u0440\u0456\u0431\u043D\u0430 \u0444\u0440\u0430\u043A\u0446\u0456\u044F \u0432 \u0444\u043E\u0440\u043F\u0440\u0435\u0441\u043E\u0432\u0456\u0439 \u043C\u0430\u043A\u0443\u0441\u0456: *%1$s*
-extraction.dissolvent=\u0412\u043C\u0456\u0441\u0442 \u0433\u0435\u043A\u0441\u0430\u043D\u0443 \u0432 \u0448\u0440\u043E\u0442\u0456: *%1$.,5f*
+extraction.dissolvent=\u0412\u043C\u0456\u0441\u0442 \u0433\u0435\u043A\u0441\u0430\u043D\u0443 \u0432 \u0448\u0440\u043E\u0442\u0456: *%1$s*
 extraction.miscellas=\u041A\u043E\u043D\u0446\u0435\u043D\u0442\u0440\u0430\u0446\u0456\u044F \u043C\u0456\u0441\u0446\u0435\u043B\u0456: *%1$s*
 extraction.humidity=\u0412\u043E\u043B\u043E\u0433\u0430 \u0448\u0440\u043E\u0442\u0443: *%1$s*
 extraction.oiliness=\u041C.\u0427.\u041E \u0432 \u0448\u0440\u043E\u0442\u0456: *%1$s*
@@ -398,6 +399,7 @@ extraction.storage.protein.title=%1$s, %2$s
 extraction.storage.protein=\u0421\u0438\u0440\u0438\u0439 \u043F\u0440\u043E\u0442\u0435\u0457\u043D: %1$s
 extraction.storage.humidity=\u0412\u043E\u043B\u043E\u0433\u0430: %1$s
 extraction.oil.title=#    \u0415\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0456\u0439\u043D\u0430 \u043E\u043B\u0456\u044F    #
+vro.oil.title=#    \u041F\u0440\u0435\u0441\u043E\u0432\u0430 \u043E\u043B\u0456\u044F    #
 extraction.oil.turn=\u0417\u043C\u0456\u043D\u0430 #%1$s \u0437\u0430 %2$s
 bot.extraction.oil.humidity=\u041C.\u0427. \u0432\u043E\u043B\u043E\u0433\u0438: %1$s
 extraction.oil.acid.value=\u041A\u0438\u0441\u043B\u043E\u0442\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$s
@@ -447,6 +449,7 @@ notification.kpo.organoleptic.no=\u043D\u0435 \u0432\u0456\u0434\u043F\u043E\u04
 notification.kpo.acid=\u041A\u0438\u0441\u043B\u043E\u0442\u043D\u0435 \u0447\u0438\u0441\u043B\u043E\: %s
 notification.weight.correction=\u0412\u0456\u0434\u0441\u043E\u0442\u043E\u043A \u043F\u0435\u0440\u0435\u0440\u0430\u0445\u0443\u043D\u043A\u0443\: %s
 notification.kpo.peroxide=\u041F\u0435\u0440\u0435\u043A\u0438\u0441\u043D\u0435 \u0447\u0438\u0441\u043B\u043E\: %s
+notificator.kpo.phosphorus=\u041C.\u0447.\u0424\: %s
 notification.kpo.soap=\u041C\u0438\u043B\u043E (\u044F\u043A\u0456\u0441\u043D\u0430 \u043F\u0440\u043E\u0431\u0430)\: %s
 notification.kpo.soap.yes=\u0412\u0456\u0434\u0441\u0443\u0442\u043D\u0454
 notification.kpo.soap.no=\u041F\u0440\u0438\u0441\u0443\u0442\u043D\u0454
@@ -645,3 +648,5 @@ middle=\u0421\u0435\u0440\u0435\u0434\u043D\u0454
 admin.collapse.organisations=\u041A\u043E\u043B\u043B\u0430\u043F\u0441 \u043E\u0440\u0433\u0430\u043D\u0456\u0437\u0430\u0446\u0456\u0439
 press.oil=\u041F\u0440\u0435\u0441\u043E\u0432\u0430 \u043E\u043B\u0456\u044F
 mix.oil=\u0421\u0443\u043C\u0456\u0448 \u0435\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0456\u0439\u043D\u043E\u0457 \u0456 \u043F\u0440\u0435\u0441\u043E\u0432\u043E\u0457 \u043E\u043B\u0456\u0457
+notification.kpo.wax.yes=\u0412\u0456\u0434\u0441\u0443\u0442\u043D\u0456\u0439
+notification.kpo.wax.no=\u041F\u0440\u0438\u0441\u0443\u0442\u043D\u0456\u0439
