--- a/server/src/main/resources/messages_ua.properties
+++ b/server/src/main/resources/messages_ua.properties
@@ -408,11 +408,13 @@ notificator.granules.dust=\u041A\u0456\u043B\u044C\u043A\u0456\u0441\u0442\u044C
 extraction.oil.turn=\u0417\u043C\u0456\u043D\u0430 #%1$s \u0437\u0430 %2$s
 vra.granules=\u0417\u0430 %1$s
 bot.extraction.oil.humidity=\u041C.\u0427. \u0432\u043E\u043B\u043E\u0433\u0438: %1$s
+
 extraction.oil.acid.value=\u041A\u0438\u0441\u043B\u043E\u0442\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$s
 extraction.oil.peroxide.value=\u041F\u0435\u0440\u0435\u043A\u0438\u0441\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$s
 extraction.oil.phosphorus.value=\u041C.\u0447.\u0444: %1$s
 extraction.turn.protein.title=#    \u041F\u0440\u043E\u0442\u0435\u0457\u043D \u0437\u0430 \u0437\u043C\u0456\u043D\u0443    #
 vro.sun.protein.title=#    \u041F\u0440\u043E\u0442\u0435\u0457\u043D \u043D\u0430\u0441\u0456\u043D\u043D\u044F    #
+vro.sun.cellulose.title=#    \u041A\u043B\u0456\u0442\u043A\u043E\u0432\u0438\u043D\u0430 \u0437\u0430 \u0437\u043C\u0456\u043D\u0443    #
 extraction.turn.protein.turn=\u0417\u043C\u0456\u043D\u0430 #%1$s \u0437\u0430 %2$s
 extraction.turn.protein.protein=\u0421\u0438\u0440\u0438\u0439 \u043F\u0440\u043E\u0442\u0435\u0457\u043D: %1$s
 extraction.turn.protein.nmr=\u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440 \u043F\u043E \u042F\u041C\u0420: %1$s
@@ -678,3 +680,7 @@ date.to=\u043F\u043E
 items.count=\u041A\u0456\u043B\u044C\u043A\u0456\u0441\u0442\u044C \u0435\u043B\u0435\u043C\u0435\u043D\u0442\u0456\u0432
 date.will.be=\u0411\u0443\u0434\u0435 \u0432\u0441\u0442\u0430\u043D\u043E\u0432\u043B\u0435\u043D\u0430 \u0434\u0430\u0442\u0430
 note.auto.replace=\u041F\u0435\u0440\u0435\u043D\u0435\u0441\u0435\u043D\u043E \u0437 %s
+button.replace=\u041F\u0435\u0440\u0435\u043C\u0456\u0449\u0435\u043D\u043D\u044F
+year=\u0420\u0456\u043A
+week=\u0422\u0438\u0436\u0434\u0435\u043D\u044C
+day=\u0414\u0435\u043D\u044C
