--- a/server/src/main/resources/messages_ua.properties
+++ b/server/src/main/resources/messages_ua.properties
@@ -108,7 +108,7 @@ button.close=\u0417\u0430\u043A\u0440\u0438\u0442\u0438
 button.edit=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
 transportation.automobile.model=\u041C\u043E\u0434\u0435\u043B\u044C
 transportation.automobile.number=\u041D\u043E\u043C\u0435\u0440
-transportation.automobile.trailer=\u041F\u0440\u0438\u0446\u0435\u043F
+transportation.automobile.trailer=\u041F\u0440\u0438\u0447\u0435\u043F
 label.requaired=\u041E\u0431\u043E\u0432'\u044F\u0437\u043A\u043E\u0432\u043E \u0434\u043E \u0437\u0430\u043F\u043E\u0432\u043D\u0435\u043D\u043D\u044F
 person.surname=\u041F\u0440\u0456\u0437\u0432\u0438\u0449\u0435
 person.forename=\u0406\u043C'\u044F
@@ -689,3 +689,4 @@ button.stock.correction=\u041A\u043E\u0440\u0435\u0433\u0443\u0432\u0430\u043D\u
 title.storage.product.replace=\u041F\u0435\u0440\u0435\u043C\u0456\u0449\u0435\u043D\u043D\u044F
 title.report.preview=\u041F\u043E\u043F\u0435\u0440\u0435\u0434\u043D\u0456\u0439 \u043F\u0435\u0440\u0435\u0433\u043B\u044F\u0434
 collapse=\u041E\u0431'\u0454\u0434\u043D\u0430\u0442\u0438
+button.add.trailer=\u0414\u043E\u0434\u0430\u0442\u0438 \u043F\u0440\u0438\u0447\u0456\u043F
