--- a/WorkManger/app/src/main/res/values/strings.xml
+++ b/WorkManger/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">WorkManger</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="title_activity_deals">DealsActivity</string>
+    <string name="title_activity_navigation">NavigationActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
 </resources>
