--- a/WorkManger/app/src/main/res/values/strings.xml
+++ b/WorkManger/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <string name="app_name">WorkManger</string>
-    <string name="title_activity_main2">Main2Activity</string>
+    <string name="app_name">WorkManager</string>
     <string name="title_activity_deals">DealsActivity</string>
     <string name="title_activity_navigation">NavigationActivity</string>
 
@@ -8,4 +7,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="deals">Deals</string>
 </resources>
