--- a/WorkManger/app/src/main/res/values/strings.xml
+++ b/WorkManger/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
 
     <string name="action_settings">Settings</string>
     <string name="deals">Deals</string>
+    <string name="title_activity_navigaion">NavigaionActivity</string>
 </resources>
