--- a/server/src/main/resources/messages_ru.properties
+++ b/server/src/main/resources/messages_ru.properties
@@ -717,3 +717,6 @@ address.type=\u0422\u0438\u043F \u0430\u0434\u0440\u0435\u0441\u0438
 address.region.short=\u043E\u0431\u043B.
 address.district.short=\u0440-\u043D
 organisation.full.name=\u041F\u043E\u0432\u043D\u0430 \u043D\u0430\u0437\u0432\u0430
+booker=\u0411\u0443\u0445\u0433\u0430\u043B\u0442\u0435\u0440
+allowed=\u0412\u0456\u0434\u043F\u0443\u0441\u043A \u0434\u043E\u0437\u0432\u043E\u043B\u0438\u0432
+handed.over=\u0417\u0434\u0430\u0432
