--- a/WorkManager/app/src/main/res/values/strings.xml
+++ b/WorkManager/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="action_settings">Settings</string>
     <string name="deals">Deals</string>
     <string name="title_activity_navigaion">NavigaionActivity</string>
+    <string name="deals_menu">Deals</string>
+    <string name="transport_menu">Transport</string>
+    <string name="deals_title">Deals</string>
+    <string name="transport_title">Transport</string>
 </resources>
