--- a/spedition/SpeditionClient/app/src/main/res/values/strings.xml
+++ b/spedition/SpeditionClient/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="close">Закрити</string>
     <string name="check">✓</string>
     <string name="notes">Примітки</string>
+    <string name="done">Завершено</string>
 </resources>
