--- a/spedition/SpeditionClient/app/src/main/res/values/strings.xml
+++ b/spedition/SpeditionClient/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="phones">Телефони</string>
     <string name="title_location_permission">Геодані</string>
     <string name="message_location_permission">Для кращої роботи програмі потрібен дозвіл на доступ до геоданих пристрою</string>
-    <string name="done_date">Дата завершення відрядження:</string>
+    <string name="done_date">Відрядження завершено:</string>
     <string name="date_template">--.--.--</string>
     <string name="time_template">--:--</string>
     <string name="fare">Проїзд</string>
@@ -68,4 +68,10 @@
     <string name="done_report_message">Встановити відмітку про завершення відрядження?</string>
     <string name="no_title">Не всі обов’язкові поля заповнені</string>
     <string name="fields">Точки відвантаження</string>
+    <string name="surname">Прізвище</string>
+    <string name="forename">Ім’я</string>
+    <string name="phones_edit_title">Редагування телефонів</string>
+    <string name="show_title">Перегляд</string>
+    <string name="addBaseWeight">Вага на заводі</string>
+    <string name="weightTitle">Редагування ваги</string>
 </resources>
